packages/aethyme-cloud/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aethyme-cloud
  labels:
    name: aethyme-cloud
    environment: production
